--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -437,3 +437,33 @@
     "\\end{align}\n",
     "\n",
     "This cost function has a desirable property that (you can check this for yourself!):\n",
+    "- $\\mathrm{cost}(h_{\\theta}(x), y) = 0$ if $y = 1$ and $h_{\\theta}(x) = 1$,\n",
+    "- $\\mathrm{cost}(h_{\\theta}(x), y) \\to \\infty$ if $y = 1$ and $h_{\\theta}(x) \\to 0$,\n",
+    "- $\\mathrm{cost}(h_{\\theta}(x), y) = 0$ if $y = 0$ and $h_{\\theta}(x) = 0$, and\n",
+    "- $\\mathrm{cost}(h_{\\theta}(x), y) \\to \\infty$ if $y = 0$ and $h_{\\theta}(x) \\to 1$.\n",
+    "\n",
+    "This means that an algorithm is penalised by $0$ if it gets the classification right, but by a very large cost if it gets it wrong."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4 Simplified Cost Function\n",
+    "\n",
+    "The cost function\n",
+    "\\begin{align}\n",
+    "    \\mathrm{cost}(h_{\\theta}(x), y) &=\n",
+    "        \\begin{cases}\n",
+    "            -\\log (h_{\\theta}(x)) & \\text{if } y = 1 \\\\\n",
+    "            -\\log (1 - h_{\\theta}(x)) & \\text{if } y = 0\n",
+    "        \\end{cases}\n",
+    "\\end{align}\n",
+    "is quite clunky to work with.\n",
+    "\n",
+    "It turns out that we can write it in one expression as\n",
+    "\\begin{align}\n",
+    "    \\mathrm{cost}(h_{\\theta}(x), y) &= -y \\log (h_{\\theta}(x)) - (1 - y) \\log (1 - h_{\\theta}(x)).\n",
+    "\\end{align}\n",
+    "\n",
+    "Check for yourself that, as required:\n",
