Update composer dependencies

--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -500,3 +500,31 @@
     "            \\vdots \\\\\n",
     "            y^{(m)}\n",
     "        \\end{bmatrix},\n",
+    "\\end{align}\n",
+    "where $n$ is the number of features and $m$ is the number of examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# complete the code here before running this cell\n",
+    "def calculate_cost(X, y, theta):\n",
+    "    \"\"\"\n",
+    "    Implement the cost function explained above.\n",
+    "\n",
+    "    Arguments:\n",
+    "    X -- training data, of size (number of samples, number of features)\n",
+    "    y -- true \"label\" vector, of size (number of samples, 1)\n",
+    "    theta -- weights, of size (number of features, 1)\n",
+    "\n",
+    "    Return:\n",
+    "    cost -- cost for logistic regression, a scalar\n",
+    "    \"\"\"\n",
+    "    m, n = X.shape             # m is number of samples, n is number of features\n",
+    "                           \n",
+    "    'write code here'                               \n",
