--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -597,3 +597,37 @@
     "        \\vdots \\\\\n",
     "        h_{\\theta}(x^{(m)})\n",
     "    \\end{bmatrix}.\n",
+    "\\end{align}\n",
+    "\n",
+    "Your task now is to implement a function that takes in a matrix $X$, a vector $y$, and a vector $\\theta$ and returns the vector $\\nabla_{\\theta} J(\\theta)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# complete the code here before running this cell\n",
+    "def calculate_gradient(X, y, theta):\n",
+    "    \"\"\"\n",
+    "    Implement the gradient function above.\n",
+    "    \n",
+    "    Arguments: same as calculate_cost function\n",
+    "    \n",
+    "    Return:\n",
+    "    dtheta: a vector holding the gradient for all theta_j, of size (number of features, 1)\n",
+    "    \"\"\"\n",
+    "    m, n = X.shape                           # m is number of samples, n is number of features\n",
+    "    \n",
+    "    'write code here'\n",
+    "    \n",
+    "    assert dtheta.shape == (n, 1)            # making sure the shape of dtheta is correct\n",
+    "    \n",
+    "    return dtheta"
+   ]
+  },
+  {
+   "cell_type": "code",
