Fix some broken tests

--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -631,3 +631,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Once you finish the code above, run this cell and compared your output to the expected output\n",
+    "theta = np.zeros((3, 1))\n",
+    "calculate_gradient(X, y, theta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected Output**: \n",
+    "\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td>**Gradients for theta**</td>\n",
+    "    <td> -0.1 &emsp; -1.20092166 &emsp; -1.12628422</td> \n",
+    "  </tr>\n",
+    "</table>\n"
+   ]
