--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -657,3 +657,32 @@
     "  </tr>\n",
     "</table>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 3.6 Optimization of $J(\\theta)$\n",
+    "\n",
+    "We are now ready to perform gradient descent to minimize $J(\\theta)$ with respect to $\\theta$.\n",
+    "The pseudocode for gradient is simply:\n",
+    "- Initialize $\\theta$\n",
+    "- Repeat until convergence:\n",
+    "    - Update $\\theta_j = \\theta_j - \\alpha \\cdot \\frac{\\partial J(\\theta)}{\\partial \\theta_j}$ for all $\\theta_j$\n",
+    "where $\\alpha$ is the learning rate.\n",
+    "\n",
+    "In the vectorized form, it would be:\n",
+    "- Initialize $\\theta$\n",
+    "- Repeat until convergence:\n",
+    "    - Update $\\theta = \\theta - \\alpha \\cdot \\nabla_{\\theta} J(\\theta)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
