Source code added

--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -686,3 +686,42 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "# complete the code here before running this cell\n",
+    "m, n = X.shape\n",
+    "num_iterations = 10000\n",
+    "learning_rate = 0.1\n",
+    "theta = np.ones((n,1))\n",
+    "cost_history = np.zeros(num_iterations)\n",
+    "\n",
+    "for i in range(num_iterations):\n",
+    "    'write code here'\n",
+    "\n",
+    "\n",
+    "theta_optimal = theta.copy()    \n",
+    "fig, ax = plt.subplots(1, 1)\n",
+    "ax.set_xlabel('Gradient descent step')\n",
+    "ax.set_ylabel('$J(\\\\theta)$')\n",
+    "ax.grid(True)\n",
+    "ax.plot(cost_history)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Once you finish the code above, run this cell and compared your output to the expected output\n",
+    "print('The final theta is: \\n {}'.format(theta_optimal))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected Output**: \n",
+    "\n",
