--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -725,3 +725,28 @@
    "source": [
     "**Expected Output**: \n",
     "\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td>**Optimal theta**</td>\n",
+    "    <td> -15.26656328 &emsp; 1.27230783 &emsp; 1.21435648</td> \n",
+    "  </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.7 Make predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
