Updated about me

--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -750,3 +750,27 @@
    },
    "outputs": [],
    "source": [
+    "# complete the code here before running this cell\n",
+    "def predict(X, theta):\n",
+    "    \"\"\"\n",
+    "    Predict label of X using parameters theta.\n",
+    "    \n",
+    "    Return:\n",
+    "    y_hat -- predicted value given X, of size (number of samples, 1)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    'write code here. It might be a few lines'\n",
+    "            \n",
+    "    return y_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Once you finish the code above, run this cell and compared your output to the expected output\n",
+    "train_accuracy = np.mean(1 - np.abs(predict(X, theta_optimal) - y))\n",
