Fixed version number

--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -774,3 +774,35 @@
    "source": [
     "# Once you finish the code above, run this cell and compared your output to the expected output\n",
     "train_accuracy = np.mean(1 - np.abs(predict(X, theta_optimal) - y))\n",
+    "print('Train accuracy: {} %'.format(train_accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Expected Output**: \n",
+    "\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td>**Train accuracy**</td>\n",
+    "    <td> 89% </td> \n",
+    "  </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.8 Decision Boundary\n",
+    "\n",
+    "We can view the decision boundary at final $\\theta$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
