--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -964,3 +964,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of matrix X_dating is (8390, 3).\n",
+      "X_dating has 8390 samples.\n",
+      "X_dating has 3 features.\n",
+      "Shape of vector y_dating is (8390, 1).\n"
+     ]
+    }
+   ],
+   "source": [
+    "dating_data = pd.read_csv('data/dating_data.csv', sep = ',', dtype='float')\n",
+    "\n",
+    "X_dating = dating_data[['age', 'height', 'income']].values\n",
+    "y_dating = dating_data['status_after_a_month'].values\n",
+    "\n",
+    "print('Shape of matrix X_dating is {}.'.format(X_dating.shape))\n",
+    "print('X_dating has {} samples.'.format(X_dating.shape[0]))\n",
+    "print('X_dating has {} features.'.format(X_dating.shape[1]))\n",
+    "\n",
+    "y_dating = y_dating.reshape(-1, 1)\n",
+    "\n",
+    "print('Shape of vector y_dating is {}.'.format(y_dating.shape))"
