--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -1060,3 +1060,31 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age  height   income  status_after_a_month\n",
+       "0  35.0    70.0  80000.0                   1.0\n",
+       "1  23.0    71.0  20000.0                   1.0\n",
+       "2  28.0    72.0  40000.0                   0.0\n",
+       "3  40.0    71.0  60000.0                   1.0\n",
+       "4  22.0    65.0  20000.0                   1.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dating_data.head(5)"
+   ]
+  },
