--- a/LogisticRegressionHard.ipynb
+++ b/LogisticRegressionHard.ipynb
@@ -1088,3 +1088,34 @@
     "dating_data.head(5)"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have 3 features: age, height, income that belong to a male person. The target variable is his status after a month. $0$ means no connection, $1$ means at least one connection.\n",
+    "\n",
+    "However, as you can see, the features are in different units, with different scale:\n",
+    "\n",
+    "- Age is between 18 and 69.\n",
+    "\n",
+    "- Height is in inches, between 53 (~140 cm) and 83 (~210 cm)\n",
+    "\n",
+    "- Income is in \\$, annual income, between \\$20,000 and \\$1,000,000.\n",
+    "\n",
+    "\n",
+    "With feature 3 numerically very large compared to the other 2 features, $\\theta_3$ might be very small, as well as numerical instabilities might occur.\n",
+    "\n",
+    "Thus, we opt to **standardise** the data - scaling it so that each feature is skrunk down to a new set of numbers having mean of 0 and standard deviation of 1.\n",
+    "\n",
+    "For example, the range of income (20000, 1000000) becomes (-0.44352, 4.33322) instead. The mapping between feature j and the scaled feature j is retained, to transform it back or to transform new test data.\n",
+    "\n",
+    "We can achieve this with the following code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
